question-mark overlapping select dropdown fixed.

--- a/client/src/components/Book/book.css
+++ b/client/src/components/Book/book.css
@@ -135,7 +135,7 @@
 }
 
 .rooms-help {
-  z-index: 2;
+  z-index: 0;
   position: absolute;
   right: 0;
   top: 0;
